<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10sp"
            android:fontFamily="sans-serif"
            android:text="@string/mobile_check_in"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="22sp" />


        <LinearLayout
            android:id="@+id/lyt_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_header"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:baselineAligned="false">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/et_fst_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10sp"
                    android:fontFamily="sans-serif"
                    android:hint="@string/first_name"
                    android:paddingStart="5sp"
                    android:singleLine="true"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <EditText

                    android:id="@+id/et_lst_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10sp"
                    android:fontFamily="sans-serif"
                    android:hint="@string/last_name"
                    android:paddingStart="5sp"
                    android:singleLine="true"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tv_mb_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lyt_name"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp">

            <EditText
                android:id="@+id/et_mobile_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:fontFamily="sans-serif"
                android:hint="@string/mobile_number"
                android:paddingStart="5sp"
                android:singleLine="true"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tv_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_mb_no"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp">

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:fontFamily="sans-serif"
                android:hint="@string/email"
                android:paddingStart="5sp"
                android:singleLine="true"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tv_dob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_mail"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp">

            <EditText
                android:id="@+id/et_dob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:fontFamily="sans-serif"
                android:hint="@string/date_of_birth"
                android:paddingStart="5sp"
                android:singleLine="true"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tv_nationality"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_dob"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp">

            <EditText
                android:id="@+id/et_nationality"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:fontFamily="sans-serif"
                android:hint="@string/nationality"
                android:paddingStart="5sp"
                android:singleLine="true"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_kyc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_nationality"
            android:layout_marginTop="5dp"
            android:background="@color/gray"
            android:paddingLeft="22dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/kyc"
            android:textColor="@color/black" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tv_document_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_kyc"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp">

            <EditText
                android:id="@+id/et_document_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:fontFamily="sans-serif"
                android:hint="@string/document_type"
                android:paddingStart="5sp"
                android:singleLine="true"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tv_document_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_document_type"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp">

            <EditText
                android:id="@+id/et_document_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:fontFamily="sans-serif"
                android:hint="@string/document_number"
                android:paddingStart="5sp"
                android:singleLine="true"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/tv_attachments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_document_number"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:paddingLeft="12dp"
            android:text="@string/attachments" />
        <LinearLayout
            android:id="@+id/lyt_upload"
            android:layout_below="@+id/tv_attachments"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_upload"
                android:layout_width="60dp"
                android:layout_height="50dp"
                android:scaleType="fitXY"
                android:src="@drawable/ic_upload" />
            <TextView
                android:textColor="@color/black"
                android:layout_marginStart="10dp"
                android:text="@string/upload"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
            <androidx.recyclerview.widget.RecyclerView
                android:layout_below="@+id/tv_attachments"
                android:layout_toEndOf="@+id/lyt_upload"
                android:id="@+id/mobile_checkin_recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <Button
     android:layout_margin="40dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/lyt_upload"
            android:background="@drawable/btn_bg"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:text="@string/submit"/>

    </RelativeLayout>


</ScrollView>