<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:padding="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:textSize="18sp"
                android:fontFamily="sans-serif"
                android:singleLine="true"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:id="@+id/tv_fname"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/et_border_black"
                android:hint="@string/first_name"
                android:paddingStart="5dp" />

            <EditText
                android:textSize="18sp"
                android:fontFamily="sans-serif"
                android:singleLine="true"
                android:id="@+id/tv_lname"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/et_border_black"
                android:hint="@string/last_name"
                android:paddingStart="5dp" />

            <EditText
                android:textSize="18sp"
                android:fontFamily="sans-serif"
                android:singleLine="true"
                android:id="@+id/tv_email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/et_border_black"
                android:hint="@string/email"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:paddingStart="5dp" />

            <com.hbb20.CountryCodePicker
                android:textSize="18sp"
                android:fontFamily="sans-serif"
                android:id="@+id/reg_country_code_picker"
                app:ccp_textGravity="LEFT"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/et_border_black"
                android:gravity="center_vertical" />
            <EditText
                android:textSize="18sp"
                android:fontFamily="sans-serif"
                android:inputType="number"
                android:singleLine="true"
                android:id="@+id/tv_contact_no"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/et_border_black"
                android:hint="Mobile Number"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:paddingStart="5dp" />
            <Button
                android:textSize="18sp"
                android:fontFamily="sans-serif"
                android:id="@+id/btn_register"
                android:text="@string/register"
                android:textAllCaps="false"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>