<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
    <ScrollView
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/tv_confirm_button">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:fontFamily="sans-serif-medium"
                android:textStyle="italic"
                android:id="@+id/tv_header_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/ordered_list_of_services"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <LinearLayout
               android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="5dp"
                android:id="@+id/lyt_hotrizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_header_view"
                android:orientation="horizontal">

                <TextView
                    android:fontFamily="sans-serif"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:text="@string/services"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:fontFamily="sans-serif"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:layout_weight="1"
                    android:paddingEnd="10dp"
                    android:text="@string/quantity"
                    android:textAlignment="textEnd"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

            </LinearLayout>

            <View
                android:layout_below="@+id/lyt_hotrizontal"
                android:id="@+id/my_view"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="3dp"
                android:layout_marginRight="20dp"
                android:background="@color/gray" />
            <androidx.recyclerview.widget.RecyclerView
                android:nestedScrollingEnabled="false"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:id="@+id/house_keeping_segment_recycler"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/my_view"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp" />
        </RelativeLayout>
    </ScrollView>

    <TextView
        android:id="@+id/tv_confirm_button"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:background="@color/black"
        android:gravity="center_vertical"
        android:text="@string/confirm_request"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16sp" />

</RelativeLayout>